--- a/seat-service/src/main/resources/application.properties
+++ b/seat-service/src/main/resources/application.properties
@@ -2,3 +2,5 @@ spring.datasource.url=jdbc:mysql://localhost:3307/tiket
 spring.datasource.username=tiket
 spring.datasource.password=tiket
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+
+spring.jackson.serialization.INDENT_OUTPUT=true
