--- a/seat-service/src/main/resources/application.properties
+++ b/seat-service/src/main/resources/application.properties
@@ -3,4 +3,7 @@ spring.datasource.username=tiket
 spring.datasource.password=tiket
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+
 spring.jackson.serialization.INDENT_OUTPUT=true
