--- a/seat-service/pom.xml
+++ b/seat-service/pom.xml
@@ -41,6 +41,10 @@
 			<artifactId>mysql-connector-java</artifactId>
 		</dependency>
 		
+	 <dependency>
+	  <groupId>joda-time</groupId>
+	  <artifactId>joda-time</artifactId>
+	 </dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
