--- a/seat-service/src/main/resources/application.properties
+++ b/seat-service/src/main/resources/application.properties
@@ -7,3 +7,6 @@ spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 
 spring.jackson.serialization.INDENT_OUTPUT=true
+
+logging.level.com.artivisi.tiket=DEBUG
+
